# openAPI_book.yaml
@@ -39,9 +39,9 @@ paths:
         - name: title
           in: query
           required: false
+          description: Tìm kiếm theo tiêu đề sách
           schema:
             type: string
-            description: Tìm kiếm theo tiêu đề sách
       responses:
         "200":
           description: Tìm kiếm sách thành công
@@ -66,6 +66,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/BookResponse"
+        "404":
+          description: không tìm thấy sách
 
     put: 
       summary: Cập nhật thông tin sách
@@ -88,6 +90,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/BookResponse"
+        "404":
+          description: không tìm thấy sách
     patch:
       summary: Cập nhật một phần sách
       parameters:
@@ -104,6 +108,12 @@ paths:
       responses:
         "200":
           description: Cập nhật thành công
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BookResponse"
+        "404":
+          description: Không tìm thấy sách
     delete: 
       summary: Xóa sách
       parameters:
@@ -113,11 +123,8 @@ paths:
           schema:
             type: integer
       responses:
-        "200":
+        "204":
           description: Xóa sách thành công
-        "404":
-          description: Sách không tồn tại
-                 
 components:
   schemas:
 
